--- a/multiplication/templates/multiplication.html
+++ b/multiplication/templates/multiplication.html
@@ -7,10 +7,14 @@
   <body>
     <h3>Multiplication</h3>
     <form action="{{ url_for("multiply.mulnum") }}" method="post">
+      <label for="num1">Enter first number</label>
       <input type="text"  id="num1" name="num1">
+      <label for="num2">Enter second number</label>
       <input type="text" id="num2" name="num2">
-      <button type="submit"></button>
+      <button type="submit">Submit</button>
     </form>
-    <p id="response"></p>
+    {% if result is defined %}
+      <p id="response">Product of given numbers is: {{ result }}</p>
+    {% endif %}
   </body>
 </html>
