--- a/division/templates/division.html
+++ b/division/templates/division.html
@@ -7,10 +7,13 @@
   <body>
     <h3>Division</h3>
     <form action="{{ url_for("division.divnum") }}" method="post">
+       <label for="num1">Enter first number</label>
       <input type="text"  id="num1" name="num1">
+       <label for="num2">Enter first number</label>
       <input type="text" id="num2" name="num2">
-      <button type="submit"></button>
+      <button type="submit">Submit</button>
     </form>
-    <p id="response"></p>
+    {% if result is defined %}
+      <p id="response">Fraction of given numbers is: {{ result }}</p>
+    {% endif %}
   </body>
-</html>
